manifests/service-ingress/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.somthinsimple.dev`)
    services:
    - kind: Service
      name: argocd-server
      port: 443
      namespace: argocd
